Improved some spacing issues

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,14 @@
 
 div {
   width: 100%;
+  height: 100%;
   align-content: center;
   text-align: center;
-  margin: 0 auto;
 }
 
 ul {
   list-style-position: inside;
+  columns: 2;
 }
 
 h1 {
@@ -45,6 +46,7 @@ button {
 .display {
   width: 100%;
   height: 500px;
+  margin-top: 100px;
 }
 
 body {
